--- a/Challenge_1/challenge.html
+++ b/Challenge_1/challenge.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
+  <head>
 
-    <body>
-    </body>
+  </head>
+  <body>
+      <h1>Toronto Sports</h1>
+  </body>
 </html>
