--- a/Challenge_1/challenge.html
+++ b/Challenge_1/challenge.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <title> Toronto Sports </title>    
   </head>
   <body>
-      <h1>Toronto Sports</h1>
+    <h1>Toronto Sports</h1>
+    <h2> A Legacy of Excellence </h2>
+      <p> Toronto has teams for a large number of professional sports: </p>
+        <li></li>
   </body>
 </html>
