--- a/Challenge_1/challenge.html
+++ b/Challenge_1/challenge.html
@@ -4,9 +4,18 @@
     <title> Toronto Sports </title>    
   </head>
   <body>
-    <h1>Toronto Sports</h1>
-    <h2> A Legacy of Excellence </h2>
-      <p> Toronto has teams for a large number of professional sports: </p>
-        <li></li>
+    <header>
+      <h1>Toronto Sports</h1>
+    <header>
+    <section>
+      <h2> A Legacy of Excellence </h2>
+        <p> Toronto has teams for a large number of professional sports: </p>
+        <ul>
+          <li> NHL </li>
+          <li> MLB </li>
+          <li> NBA </li>
+          <li> NLL </li>
+    </section>
   </body>
 </html>
+ 
